--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
+html {
+  /*14 px = 0.875rem*/
+  font-size: .875rem;
+}
+html::-webkit-scrollbar {
+  width: 2vh;
+}
+html::-webkit-scrollbar-thumb {
+  background-color: #caa532;
+}
+html::-webkit-scrollbar-track {
+  background-color: #9b9b9b;
+}
 body {
   margin: 0;
+  padding: 0 5vw;
+  background-color: #222529 !important;
+  color: white !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+a {
+  font-weight: 900;
+  font-size: 1.15rem;
+  color:#caa532 !important;
+  text-decoration: none;
+  cursor: pointer;
+}
+p {
+  font-size: 1.375rem;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Notable', sans-serif;
+  color: #9b9b9b;
+  margin: 1vh 0vw 2vh;
+}
+
+h1 { font-size: 2.375rem; text-align: center; text-transform: uppercase;; }
+h2 { font-size: 2rem; }
+h3 { font-size: 1.75rem; }
+h4 { font-size: 1.50rem; }
+h5 { font-size: 1.25rem; }
+h6 { font-size: 1rem; }
+.myUppercase {
+  text-transform: uppercase;
+}
+.containerMargin {
+  margin: 5rem;
+}
+.containerHeader {
+  margin: 10px 0 30px;
 }
